objects/copado__Copado_Notification__c.object
<CustomObject>
    <fields>
        <fullName>copado__AttachmentId__c</fullName>
        <externalId>true</externalId>
        <label>AttachmentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Parent2Id__c</fullName>
        <label>Parent2Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__ParentId__c</fullName>
        <label>ParentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>